fix: alignment title tablete

--- a/sass/style.sass
+++ b/sass/style.sass
@@ -39,7 +39,7 @@ a
   
   /*********** Tablet ***********/
   @media only screen and (min-width: 768px)
-    max-width: 768px
+    max-width: 740px
     margin: 0 auto 30px auto
 
   /*********** Desktop ***********/
